Added config for Client.java Hide full rooms